1、把登录注册注册中的infoChanged回调方法写到events.js中 2、重新登录头像不显示的问题 3、接受邀请后刷新首页

--- a/JiaoBaoYun-hb/html/register/yanZhengMa.html
+++ b/JiaoBaoYun-hb/html/register/yanZhengMa.html
@@ -114,7 +114,7 @@
 									var temp;
 									events.openNewWindowWithData('modify_password.html', temp);
 									events.fireToPageNone('modify_password.html', 'registerPW');
-									events.fireToPageNone('../quan/tab-zone.html','infoChanged');
+									events.infoChanged();
 								});
 							} else { //验证码模式登录1
 								console.log('yanzhengma denglu');
@@ -133,7 +133,7 @@
 										var temp;
 										events.openNewWindowWithData('modify_password.html', temp);
 										events.fireToPageNone('modify_password.html', 'registerPW');
-										events.fireToPageNone('../quan/tab-zone.html','infoChanged');
+//										events.fireToPageNone('../quan/tab-zone.html','infoChanged');
 									}
 
 								});
