--- a/JiaoBaoYun-hb/html/register/login.html
+++ b/JiaoBaoYun-hb/html/register/login.html
@@ -244,10 +244,7 @@
 										tempInfo.utxt = tepI0000.utxt;
 										window.myStorage.setItem(window.storageKeyName.PERSONALINFO, tempInfo);
 										//
-										events.fireToPageNone('mine.html','infoChanged');
-										events.fireToPageNone('../cloud/cloud_home.html','infoChanged');
-										events.fireToPageNone('../quan/tab-zone.html','infoChanged');
-										events.fireToPageNone('../index/index.html', 'infoChanged');
+										events.infoChanged();
 										console.log('登录保存的个人信息：' + JSON.stringify(tempInfo))
 											//跳到主界面
 										events.openNewWindowWithData('../index/index.html', '');
@@ -405,10 +402,7 @@
 									data.RspData.ispw = '1';
 									window.myStorage.setItem(window.storageKeyName.PERSONALINFO, data.RspData);
 									//
-									events.fireToPageNone('mine.html','infoChanged');
-									events.fireToPageNone('../cloud/cloud_home.html','infoChanged');
-									events.fireToPageNone('../quan/tab-zone.html','infoChanged');
-									events.fireToPageNone('../index/index.html', 'infoChanged');
+									events.infoChanged();
 									//存储自动登录
 									//									loginInfo.auto = 1;
 									//									window.myStorage.setItem(window.storageKeyName.AUTOLOGIN, loginInfo);
