作业记录界面和逻辑

--- a/JiaoBaoYun-hb/html/homework/homework-record.html
+++ b/JiaoBaoYun-hb/html/homework/homework-record.html
@@ -19,8 +19,9 @@
 		    <h1 class="mui-title">作业记录</h1>
 		</header>
 		<script src="../../js/mui.min.js"></script>
+		<script src="../../js/utils/events.js"></script>
 		<script type="text/javascript">
-			mui.init()
+			events.initSubPage("homeworkRecord-sub.html");
 		</script>
 	</body>
 
